Adding support to change transaction's bill
